--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.27.0",
+    "react-select": "^5.8.2",
     "react-select-async-paginate": "^0.7.6"
   },
   "devDependencies": {
